--- a/src/styles/basics.sass
+++ b/src/styles/basics.sass
@@ -1,3 +1,15 @@
 #shoutbox
     overflow: hidden
     padding: 0 10px 10px 10px
+
+    #shoutbox-options
+        float: right
+        width: 40px
+
+    #shoutbox-shouts
+        width: auto
+        overflow: hidden
+        float: none
+
+    #shoutbox-form
+        clear: both
