Add infobox element into shouts

--- a/src/styles/shouts.sass
+++ b/src/styles/shouts.sass
@@ -21,7 +21,7 @@
             background: #626262
 
     .newShout
-        background: #494D4D
+        background: #494d4d
         padding: 5px 0
         margin: 2px 0
         min-height: 20px
@@ -47,7 +47,7 @@
         &:before
             content: "!"
             float: right
-            color: #A4BF37
+            color: #a4bf37
             font-style: bold
             font-size: 20px
             margin-top: 5px
@@ -73,3 +73,20 @@
 
     .shoutMeMessage
         font-style: italic
+
+    .shoutMessage
+        .infobox
+            float: right
+            background-color: #777
+            border-radius: 10px
+            color: #fff
+            display: inline-block
+            font-size: 12px
+            font-style: normal
+            font-weight: 700
+            line-height: 1
+            min-width: 10px
+            padding: 3px 7px
+            text-align: center
+            vertical-align: middle
+            white-space: nowrap
