--- a/src/styles/shouts.sass
+++ b/src/styles/shouts.sass
@@ -10,12 +10,12 @@
         -moz-transition: all 1s ease-out
         -o-transition: all 1s ease-in-out
         transition: all 1s ease-out
-        -webkit-border-top-right-radius: 10px
-        -webkit-border-bottom-right-radius: 10px
-        -moz-border-radius-topright: 10px
-        -moz-border-radius-bottomright: 10px
-        border-top-right-radius: 10px
-        border-bottom-right-radius: 10px
+        -webkit-border-top-left-radius: 10px
+        -webkit-border-bottom-left-radius: 10px
+        -moz-border-radius-topleft: 10px
+        -moz-border-radius-bottomleft: 10px
+        border-top-left-radius: 10px
+        border-bottom-left-radius: 10px
 
         &:hover
             background: #626262
