Adjustment options buttons styles

--- a/src/styles/options.sass
+++ b/src/styles/options.sass
@@ -8,7 +8,7 @@
 #shoutbox-options
     .option
         width: 40px
-        height: 40px
+        height: 35px
         -webkit-transition: all 1s ease-out
         -moz-transition: all 1s ease-out
         -o-transition: all 1s ease-in-out
@@ -22,6 +22,7 @@
         padding: 7px
         font-size: 23pt
         color: #a4bf37
+        cursor: pointer
 
         &:hover
             background: #626262
