Removing 'Swanky and Moo Moo' font from styles

--- a/src/styles/shouts.sass
+++ b/src/styles/shouts.sass
@@ -59,10 +59,11 @@
         font-weight: bold
 
     .shoutDeleteButton
-        font-family: 'Swanky and Moo Moo', cursive
         color: #fc1f35
-        font-size: 15px
+        font-size: 9px
         margin: 0 5px
+        font-style: normal
+        font-weight: bold
         -webkit-transition: all 1s ease-out
         -moz-transition: all 1s ease-out
         -o-transition: all 1s ease-in-out
