Add info shouts, adjust version display

--- a/src/styles/shouts.sass
+++ b/src/styles/shouts.sass
@@ -20,6 +20,9 @@
         &:hover
             background: #626262
 
+    .shoutTimeMarker
+        margin-left: 17px
+
     .newShout
         background: #494d4d
         padding: 5px 0
@@ -67,6 +70,7 @@
         -moz-transition: all 1s ease-out
         -o-transition: all 1s ease-in-out
         transition: all 1s ease-out
+        position: absolute
 
         &:hover
             color: white
