Add icons for option Hide Pictures

--- a/src/styles/options.sass
+++ b/src/styles/options.sass
@@ -74,3 +74,9 @@
 
     .icon-embed2:before
         content: "\e90b"
+
+    .icon-file-empty:before
+        content: "\e90c"
+
+    .icon-file-picture:before
+        content: "\e90d"
