--- a/src/styles/shouts.sass
+++ b/src/styles/shouts.sass
@@ -94,3 +94,6 @@
             text-align: center
             vertical-align: middle
             white-space: nowrap
+
+        img
+            vertical-align: middle
