Add reports for errors during downloading new shouts

--- a/src/styles/shouts.sass
+++ b/src/styles/shouts.sass
@@ -20,6 +20,12 @@
         &:hover
             background: #626262
 
+        &.errorShout
+            background-color: crimson
+
+            > .shoutMessage
+                font-weight: bold
+
     .shoutTimeMarker
         margin-left: 17px
 
