Refactoring in styles files

--- a/src/styles/basics.sass
+++ b/src/styles/basics.sass
@@ -9,5 +9,7 @@
     #shoutbox-form
         clear: both
 
-        .shoutbox-buttons
-            padding: 5px
+    #shoutbox-shouts
+        width: auto
+        overflow: hidden
+        float: none
