--- a/src/styles/shouts.sass
+++ b/src/styles/shouts.sass
@@ -1,47 +1,27 @@
-#shoutbox-shouts
-    width: auto
-    overflow: hidden
-    float: none
+#shoutbox-shouts > div
+    background: #3c3e3e
+    padding: 3px 0
+    -webkit-transition: all 1s ease-out
+    -moz-transition: all 1s ease-out
+    -o-transition: all 1s ease-in-out
+    transition: all 1s ease-out
+    -webkit-border-top-left-radius: 10px
+    -webkit-border-bottom-left-radius: 10px
+    -moz-border-radius-topleft: 10px
+    -moz-border-radius-bottomleft: 10px
+    border-top-left-radius: 10px
+    border-bottom-left-radius: 10px
 
-    > div
-        background: #3c3e3e
-        padding: 3px 0
-        -webkit-transition: all 1s ease-out
-        -moz-transition: all 1s ease-out
-        -o-transition: all 1s ease-in-out
-        transition: all 1s ease-out
-        -webkit-border-top-left-radius: 10px
-        -webkit-border-bottom-left-radius: 10px
-        -moz-border-radius-topleft: 10px
-        -moz-border-radius-bottomleft: 10px
-        border-top-left-radius: 10px
-        border-bottom-left-radius: 10px
+    &:hover
+        background: #626262
 
-        &:hover
-            background: #626262
+    &.errorShout
+        background-color: crimson
 
-        &.errorShout
-            background-color: crimson
+        > .shoutMessage
+            font-weight: bold
 
-            > .shoutMessage
-                font-weight: bold
-
-    .shoutTimeMarker
-        margin-left: 17px
-
-    .newShout
-        background: #494d4d
-        padding: 5px 0
-        margin: 2px 0
-        min-height: 20px
-
-        &:before
-            content: url(shoutbox/new.png)
-            float: right
-            margin-top: 3px
-            margin-right: 15px
-
-    .shoutForYou
+    &.shoutForYou
         background: #5d5d5d
         padding: 5px 0
         margin: 2px 0
@@ -63,8 +43,26 @@
             margin-right: 21px
             font-weight: bold
 
-    .shoutItsYou
+    &.shoutItsYou
         font-weight: bold
+
+    &.newShout
+        background: #494d4d
+        padding: 5px 0
+        margin: 2px 0
+        min-height: 20px
+
+        &:before
+            content: url(shoutbox/new.png)
+            float: right
+            margin-top: 3px
+            margin-right: 15px
+
+    &.shoutMeMessage
+        font-style: italic
+
+    .shoutTimeMarker
+        margin-left: 17px
 
     .shoutDeleteButton
         color: #fc1f35
@@ -80,9 +78,6 @@
 
         &:hover
             color: white
-
-    .shoutMeMessage
-        font-style: italic
 
     .shoutMessage
         .infobox
